Fixed padding for article on mobile viewports.

--- a/client/src/sass/themes/_default.scss
+++ b/client/src/sass/themes/_default.scss
@@ -29,4 +29,7 @@ body {
 
 article {
   padding: $space-med;
+  @include media(medium) {
+    padding-bottom: 80px;
+  }
 }
